feat: Initial implementation of XPASS Token Cross-chain Bridge to BSC (Lock/Mint)
Introduces the complete lock-and-mint bridge system to support XPASS Token on the Binance Smart Chain (BSC).

* **Bridge (XPassKaiaBridge.sol):** Implemented on the Kaia chain to handle token locking, conditional unlocking, and duplicate transaction prevention.
* **BSC Token (XPassTokenBSC.sol):** New token contract with Mintable/Burnable capabilities, restricting Minting to the MINTER_ROLE and enforcing MAX_SUPPLY parity.
* **Governance Enhancement:** Integrated the XPassToken's pause/unpause functionality with the TimelockController for decentralized, time-delayed execution.
* **Files:** First commit of all new bridge contracts and their accompanying test/deployment scripts.

--- a/env.example
+++ b/env.example
@@ -26,3 +26,32 @@ KAIA_MAINNET_CHAIN_ID=8217
 # Example for different networks:
 # Testnet: MULTISIG_ADDRESS=0xYourTestnetMultiSigAddress
 # Mainnet: MULTISIG_ADDRESS=0xYourMainnetMultiSigAddress
+
+# ============================================
+# BSC Token Deployment (for bridge)
+# ============================================
+# BSC_TESTNET_RPC_URL=https://data-seed-prebsc-1-s1.binance.org:8545
+# BSC_MAINNET_RPC_URL=https://bsc-dataseed1.binance.org
+# BSC_TESTNET_CHAIN_ID=97
+# BSC_MAINNET_CHAIN_ID=56
+# BSC_TOKEN_OWNER=0xYourMultiSigAddress
+# BSC_TOKEN_MINTER=0xYourBridgeContractAddress
+# BSCSCAN_API_KEY=your_bscscan_api_key
+
+# ============================================
+# Kaia Bridge Deployment
+# ============================================
+# REQUIRED: XPassToken contract address on Kaia
+# XPASS_TOKEN_ADDRESS=0x1234567890123456789012345678901234567890
+
+# REQUIRED: BSC token contract address
+# BSC_TOKEN_ADDRESS=0x1234567890123456789012345678901234567890
+
+# OPTIONAL: BSC Chain ID (default: 97 for testnet, 56 for mainnet)
+# BSC_CHAIN_ID=97
+
+# OPTIONAL: Bridge owner (default: deployer address)
+# BRIDGE_OWNER=0xYourMultiSigAddress
+
+# REQUIRED: Bridge unlocker (off-chain relayer or Multi-Sig)
+# BRIDGE_UNLOCKER=0xYourRelayerOrMultiSigAddress
