--- a/package.json
+++ b/package.json
@@ -13,9 +13,19 @@
     "deploy-verify": "hardhat run scripts/deploy-verify.js --network testnet",
     "deploy-verify:testnet": "hardhat run scripts/deploy-verify.js --network testnet",
     "deploy-verify:mainnet": "hardhat run scripts/deploy-verify.js --network mainnet",
+    "deploy:bsc-testnet": "hardhat run scripts/deploy-bsc-token.js --network bscTestnet",
+    "deploy:bsc-mainnet": "hardhat run scripts/deploy-bsc-token.js --network bscMainnet",
+    "deploy:bridge-testnet": "hardhat run scripts/deploy-kaia-bridge.js --network testnet",
+    "deploy:bridge-mainnet": "hardhat run scripts/deploy-kaia-bridge.js --network mainnet",
     "node": "hardhat node",
     "clean": "hardhat clean",
-    "flatten": "npx hardhat flatten contracts/XPassToken.sol > flattened/XPassTokenAll.sol"
+    "flatten": "npx hardhat flatten contracts/XPassToken.sol > flattened/XPassTokenAll.sol",
+    "generate:account": "node tool/generate-test-account.js",
+    "generate:accounts": "node tool/generate-test-account.js --multiple",
+    "check:kip7": "node tool/check-kip7-balance.js",
+    "check:bep20": "node tool/check-bep20-balance.js",
+    "check:kaia": "node tool/check-kaia-balance.js",
+    "check:bnb": "node tool/check-bnb-balance.js"
   },
   "keywords": [
     "kip7",
