--- a/env.example
+++ b/env.example
@@ -1,57 +1,36 @@
-# Environment variables for XPass Token deployment
+# Environment variables for XPass Token deployment on BSC
 
 # REQUIRED: Multi-Sig address for TimelockController roles
-# This should be your Kaia Safe Multi-Sig address
+# This should be your Multi-Sig wallet address (e.g., Gnosis Safe on BSC)
 MULTISIG_ADDRESS=0x1234567890123456789012345678901234567890
 
 # OPTIONAL: Timelock delay in seconds (IGNORED on mainnet for security)
 # Default: 172800 (48 hours) for production
-# NOTE: Mainnet (Kaia Chain ID 8217) ALWAYS uses 48 hours regardless of this setting
+# NOTE: Mainnet (BSC Chain ID 56) ALWAYS uses 48 hours regardless of this setting
 # Testnet examples:
 # TIMELOCK_DELAY=60        # 1 minute (for quick testing)
 # TIMELOCK_DELAY=300       # 5 minutes (for testnet)
 # TIMELOCK_DELAY=3600      # 1 hour (for testnet)
 # TIMELOCK_DELAY=172800    # 48 hours (for production - same as mainnet)
 
-# Kaia TESTNET
-KAIA_TESTNET_RPC_URL=https://public-en-kairos.node.kaia.io
-KAIA_TESTNET_CHAIN_ID=1001
+# REQUIRED: Private key for deployment (without 0x prefix)
+PRIVATE_KEY=your-private-key-without-0x
 
-# Kaia MAINNET
-KAIA_MAINNET_RPC_URL=https://public-en.node.kaia.io
-KAIA_MAINNET_CHAIN_ID=8217
+# ============================================
+# BSC Network Configuration
+# ============================================
+# BSC TESTNET
+BSC_TESTNET_RPC_URL=https://data-seed-prebsc-1-s1.binance.org:8545
+BSC_TESTNET_CHAIN_ID=97
 
-# PRIVATE_KEY=your-private-key
+# BSC MAINNET
+BSC_MAINNET_RPC_URL=https://bsc-dataseed1.binance.org
+BSC_MAINNET_CHAIN_ID=56
+
+# REQUIRED: BSCScan API Key for contract verification
+# Get your API key from: https://bscscan.com/myapikey
+BSCSCAN_API_KEY=your_bscscan_api_key
 
 # Example for different networks:
 # Testnet: MULTISIG_ADDRESS=0xYourTestnetMultiSigAddress
 # Mainnet: MULTISIG_ADDRESS=0xYourMainnetMultiSigAddress
-
-# ============================================
-# BSC Token Deployment (for bridge)
-# ============================================
-# BSC_TESTNET_RPC_URL=https://data-seed-prebsc-1-s1.binance.org:8545
-# BSC_MAINNET_RPC_URL=https://bsc-dataseed1.binance.org
-# BSC_TESTNET_CHAIN_ID=97
-# BSC_MAINNET_CHAIN_ID=56
-# BSC_TOKEN_OWNER=0xYourMultiSigAddress
-# BSC_TOKEN_MINTER=0xYourBridgeContractAddress
-# BSCSCAN_API_KEY=your_bscscan_api_key
-
-# ============================================
-# Kaia Bridge Deployment
-# ============================================
-# REQUIRED: XPassToken contract address on Kaia
-# XPASS_TOKEN_ADDRESS=0x1234567890123456789012345678901234567890
-
-# REQUIRED: BSC token contract address
-# BSC_TOKEN_ADDRESS=0x1234567890123456789012345678901234567890
-
-# OPTIONAL: BSC Chain ID (default: 97 for testnet, 56 for mainnet)
-# BSC_CHAIN_ID=97
-
-# OPTIONAL: Bridge owner (default: deployer address)
-# BRIDGE_OWNER=0xYourMultiSigAddress
-
-# REQUIRED: Bridge unlocker (off-chain relayer or Multi-Sig)
-# BRIDGE_UNLOCKER=0xYourRelayerOrMultiSigAddress
