--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "xpass-kip7",
+  "name": "xpass-token",
   "version": "1.0.0",
-  "description": "KIP-7 standard compliant token implementation",
+  "description": "BEP20/ERC20 standard compliant token implementation for BSC",
   "main": "index.js",
   "scripts": {
     "compile": "hardhat compile",
@@ -13,25 +13,17 @@
     "deploy-verify": "hardhat run scripts/deploy-verify.js --network testnet",
     "deploy-verify:testnet": "hardhat run scripts/deploy-verify.js --network testnet",
     "deploy-verify:mainnet": "hardhat run scripts/deploy-verify.js --network mainnet",
-    "deploy:bsc-testnet": "hardhat run scripts/deploy-bsc-token.js --network bscTestnet",
-    "deploy:bsc-mainnet": "hardhat run scripts/deploy-bsc-token.js --network bscMainnet",
-    "deploy:bridge-testnet": "hardhat run scripts/deploy-kaia-bridge.js --network testnet",
-    "deploy:bridge-mainnet": "hardhat run scripts/deploy-kaia-bridge.js --network mainnet",
     "node": "hardhat node",
     "clean": "hardhat clean",
-    "flatten": "npx hardhat flatten contracts/XPassToken.sol > flattened/XPassTokenAll.sol",
-    "generate:account": "node tool/generate-test-account.js",
-    "generate:accounts": "node tool/generate-test-account.js --multiple",
-    "check:kip7": "node tool/check-kip7-balance.js",
-    "check:bep20": "node tool/check-bep20-balance.js",
-    "check:kaia": "node tool/check-kaia-balance.js",
-    "check:bnb": "node tool/check-bnb-balance.js"
+    "flatten": "npx hardhat flatten contracts/XPassToken.sol > flattened/XPassTokenAll.sol"
   },
   "keywords": [
-    "kip7",
-    "kaia",
     "blockchain",
     "token",
+    "bep20",
+    "erc20",
+    "bsc",
+    "binance-smart-chain",
     "hardhat"
   ],
   "author": "",
